--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "firebase": "^11.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
