--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
-    "@angular/common": "^17.2.0",
+    "@angular/cdk": "^17.3.10",
+    "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.2.0",
-    "@angular/core": "^17.2.0",
+    "@angular/core": "^17.3.12",
     "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.2.0",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "and": "^0.0.3",
+    "angular": "^1.8.3",
     "firebase": "^11.5.0",
+    "install": "^0.13.0",
+    "npm": "^11.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
